<resources>
    <string name="app_name">Toulouse</string>


    <string name="app_store_uri">https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="maps_api_key">AIzaSyBq1WR3vxTlj4kMtJPAeE0PrZe0AiclN3E</string>

    <string name="google_maps_key">AIzaSyAcv1QRGREISd7MP1rGnXDUf6S7VtTsl4s</string>
    <string name="youtube_api_key">AIzaSyByz_OmKb9Jj7kwhWtNl0Whw2f7P8uecaQ</string>

    <string name="facebook_app_id">898738787714859</string>
    <string name="facebook_client_token">Ujba-ew4WYyUBEeEOS2olhFU5Mo</string>

    <string name="action_call" translatable="false">Voulez vous effectuer l\'appel</string>
    <string name="action_navigate" translatable="false">Naviguer vers le spot</string>
    <string name="action_start_web_activity" translatable="false">Explorer</string>
    <string name="action_send_mail" translatable="false">Envoyer un message</string>
    <string name="action_explore_map" translatable="false">Afficher dans la Map</string>

    <string name="menu_layers_normal" translatable="false">Normal</string>
    <string name="menu_layers_satellite" translatable="false">Satellite</string>
    <string name="menu_layers_hybrid" translatable="false">Hybrid</string>
    <string name="menu_layers_terrain" translatable="false">Terrain</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Guide Touristique</string>
    <string name="nav_header_subtitle" translatable="false">Toulouse, France</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>


    <string name="fr_language" translatable="false">Français</string>
    <string name="en_language" translatable="false">Anglais</string>

    <string name="action_map" translatable="false">Map</string>
    <string name="action_rate" translatable="false">Evaluez l\'application</string>
    <string name="action_about" translatable="false">About</string>

    <string name="action_all_spots" translatable="false">Tous</string>
    <string name="action_favorites" translatable="false">Favoris</string>
    <string name="action_hotels" translatable="false">Hôtels</string>
    <string name="action_museum">Musées</string>
    <string name="action_attraction">Parcs d\'attractions</string>
    <string name="action_beaches">Plages</string>
    <string name="action_shopping">Shopping</string>
    <string name="action_sport">Sport</string>
    <string name="action_transport">Transport</string>
    <string name="action_food">Restaurants</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_proximite">A proximité de Toulouse</string>
    <string name="action_gallery">Galerie Vidéos</string>
    <string name="action_ATM">ATM</string>
    <string name="action_public_services">Services Publics</string>
    <string name="action_gardens">Jardins Publics</string>

    <string name="action_title_more">Plus</string>
    <string name="action_more">Divers</string>

    <string name="video_gallery">Toulouse en vidéos</string>

    <string name="language">Langue : Fr</string>


    <string name="placeholder_empty">Aucun resultat trouvé</string>
    <string name="placeholder_offline">Aucune connexion internet</string>


    <string name="menu_search_hint">Rechercher un spot</string>
    <string name="menu_search">Chercher</string>
    <string name="title_search">Recherche</string>

    <string name="fragment_spot_detail_map_navigate">Naviger</string>
    <string name="fragment_spot_detail_map_explore">Explorer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="fragment_spot_detail_share_subject">Visiter Toulouse</string>
    <string name="fragment_spot_detail_share_title">Partager avec les amis via</string>


    <string name="fontello_logo">&#xe8ad;</string>
    <string name="welcome">Bienvenu!</string>

    <string name="pre_loading"> touche l\'écran pour commencer  </string>
    <string name="loading">Chargement..</string>
    <string name="title_activity_spot_details_acitvity">SpotDetailsAcitvity</string>

    <string name="add_favorite">Ajouté au favoris</string>
    <string name="delete_favorite">Supprimé de favoris</string>

    <string name="about_text">
        "Toulouse-City-Guide une superbe application permettant d'explorer les lieux mangnifiques de la ville de Toulouse\n"
    </string>

    <!--<string name="gps">-->
    <!--"Votre GPS semble être désactivé, veuillez l'activer pour profiter pleinement de l'application "-->
    <!--</string>-->

    <string name="gps">
        "Votre GPS semble être désactivé, veuillez l'activer pour afficher la distance entre les différents lieux"
    </string>

    <string name="permission_service_location">
        "Activer Service de Location pour profiter pleinement de l'application"
    </string>

    <string name="service_location_not_granted">
        "De nombreuses fonctionnalités sont désactivées en raison d'une autorisation refusée! merci de reinstaller l'application"
    </string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>
